--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,11 @@
 <html>
     <head>
     <title> AirBnB Clone</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
     
-    <body>
-        <header></header>
-    <footer> 
+    <body style="margin: 0; padding: 0;">
+        <header style="background-color: #FF0000; height: 70px; width: 100%; text-align: center; line-height: 70px;"></header>
+    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: fixed; bottom: 0; text-align: center;"> 
         
     <p>Best School</p>
 
