--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -6,10 +6,17 @@
                 <link rel="stylesheet" type="text/css" href="styles/3-header.css">
                 <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
 		<link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+		<link rel="icon" href="images/icon.png" type="image/png">
         </head>
         <body>
     <header>
             <div class="logo"></div>
+	    
+	    <div class="container">
+        <section class="filters">
+            <button>Search</button>
+        </section>
+    </div>
     </header>
     <footer>Best School</footer>
 </body>
